Added way to see current users registered
