# src/routes/authRoutes.js
@@ -1,5 +1,9 @@
 import express from 'express';
-import { loginHandler, signupHandler } from '../controllers/authController.js';
+import {
+  loginHandler,
+  signupHandler,
+  userCountHandler,
+} from '../controllers/authController.js';
 import { validateLogin, validateSignup } from '../middleware/authValidators.js';
 import { asyncHandler } from '../utils/asyncHandler.js';
 
@@ -7,5 +11,6 @@ const router = express.Router();
 
 router.post('/signup', validateSignup, asyncHandler(signupHandler));
 router.post('/login', validateLogin, asyncHandler(loginHandler));
+router.get('/users/count', asyncHandler(userCountHandler));
 
 export default router;
